Updated nav bar, fixed page alignment issues, rescaled page forms

--- a/src/client/src/App.css
+++ b/src/client/src/App.css
@@ -3,8 +3,7 @@
 }
 
 .container {
-  max-width: 600px;
-  margin: auto;
+  max-width: 100vw;
   padding: 0 1rem;
 }
 
@@ -90,6 +89,21 @@ input {
   border-radius: 5px;
   font-size: 1.1em;
   line-height: 1.4em;
+  width: 600px;
+  margin-left: 350px;
+}
+
+.filter {
+  position: relative;
+  margin-top: 1rem;
+  background-color: #f3f3f3;
+  color: #fff;
+  padding: 1.3rem 3rem;
+  border-radius: 5px;
+  font-size: 1.1em;
+  line-height: 1.4em;
+  width: 800px;
+  margin-left: 250px;
 }
 
 .icons {
@@ -112,6 +126,7 @@ ul{
   overflow: hidden;
   background-color: white;
   border-bottom: 1px solid #2774AE;
+  height: 75px;
 }
 
 li{
