--- a/src/client/src/addinput.css
+++ b/src/client/src/addinput.css
@@ -11,7 +11,8 @@ input {
     margin: 10px 0px 20px 0px;
     border-radius: 5px;
     border: 1px solid gray;
-    width: 100%;
+    width: 95%;
+    align-items: center;
 }
 
 
