--- a/src/client/src/register.css
+++ b/src/client/src/register.css
@@ -3,19 +3,27 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
+    margin-top: -170px;
   }
   
   form {
       background-color: white;
-      margin-top: 10px;
-      padding: 23px 70px 0px 40px;
-      border-radius: 10px;
+      padding: 10px 60px 10px 60px;
+      border-radius: 15px;
       width: 500px;
   }
+
+  form2 {
+    background-color: white;
+    padding: 10px 60px 10px 60px;
+    border-radius: 15px;
+    width: 500px;
+    margin-top: 400px;
+    }
   
   h1 {
       color: black;
-      text-align: center;
+      text-align: middle;
   }
   
   button {
