--- a/src/client/src/rideform.css
+++ b/src/client/src/rideform.css
@@ -6,7 +6,7 @@
   }
   
   form{
-      background-color: white;
+      background-color: rgb(184, 54, 54);
       padding: 0px 60px 0px 60px;
       border-radius: 10px;
       width: 900px;
